add spring boot web app post placeholder to routing

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "start": "ng serve --open --open --ssl --aot true",
         "prebuild": "ts-node -O '{\"module\": \"commonjs\"}' git.version.ts",
         "build": "npm run prebuild && ng build --prod --base-href 'https://alexandertang.me' --aot --output-hashing=all && cp src/CNAME dist",
-        "deploy": "ngh --branch=master",
+        "build:gh": "ng build --prod --base-href https://AlexanderTang.github.io/AlexanderTang.github.io",
+        "deploy": "ngh --no-silent --branch=master",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
