deploy with JIT compiler works...

--- a/angular.json
+++ b/angular.json
@@ -49,10 +49,9 @@
               },
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
+              "aot": false,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
