AOT compiling for production

--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,8 @@
               },
               "extractCss": true,
               "namedChunks": false,
-              "aot": false,
+              "aot": true,
+              "buildOptimizer": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "budgets": [
