--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "bootstrap": "4.3.1",
         "font-awesome": "4.7.0",
         "hammerjs": "2.0.8",
+        "mailto-link": "1.0.0",
         "ngx-bootstrap": "5.2.0",
         "rxjs": "6.5.3",
         "smoothscroll-polyfill": "0.4.4",
